--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>//3.1.2ではthymeleaf ロードできず。3.1.0にダウンロードして右クリックしMAVEN再ロード
+		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.gihyo.projava</groupId>
 	<artifactId>tasklist</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Tasklist</name>
+	<name>TaskList</name>
 	<description>Spring Bootを使ったタスク管理アプリケーション</description>
 	<properties>
 		<java.version>17</java.version>
@@ -31,6 +31,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -39,6 +44,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
